--- a/android/RSCHackathon/app/build.gradle
+++ b/android/RSCHackathon/app/build.gradle
@@ -42,4 +42,11 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.android.gms:play-services-auth:9.0.0'
     compile 'com.google.android.gms:play-services-plus:9.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+
+    compile 'com.github.satyan:sugar:1.5'
+    debugCompile 'im.dino:dbinspector:3.3.0@aar'
+
+
+
 }
