--- a/android/RSCHackathon/app/build.gradle
+++ b/android/RSCHackathon/app/build.gradle
@@ -34,7 +34,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
@@ -45,6 +44,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.google.android.gms:play-services-auth:9.0.0'
-    compile 'com.google.android.gms:play-services-plus:9.0.0'
+    compile 'com.google.android.gms:play-services-auth:9.0.2'
+    compile 'com.google.android.gms:play-services-plus:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services' 
