--- a/android/RSCHackathon/app/src/main/AndroidManifest.xml
+++ b/android/RSCHackathon/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
           package="com.rsc.rschackathon">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.NFC"/>
+
+    <uses-feature
+            android:name="android.hardware.nfc"
+            android:required="true"/>
+
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -21,19 +27,21 @@
         <activity android:name=".activities.LoginActivity"/>
         <activity android:name=".activities.MainActivity">
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
+
+
             </intent-filter>
         </activity>
-
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
                 android:name=".activities.ViewPagerActivity"/>
-        <activity android:name=".activities.RecyclerViewActivity"></activity>
+        <activity android:name=".activities.RecyclerViewActivity"/>
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
-                android:name=".activities.CoolapsingToolbarActivity"></activity>
+                android:name=".activities.CoolapsingToolbarActivity"/>
 
         <meta-data
                 android:name="DATABASE"
@@ -48,16 +56,12 @@
                 android:name="DOMAIN_PACKAGE_NAME"
                 android:value="com.rsc.rschackathon.database"/>
 
-
-        <service
-                android:name=".firebase.MyFirebaseMesagingService">
+        <service android:name=".firebase.MyFirebaseMesagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
-
-        <service
-                android:name=".firebase.MyFirebaseInstanceIDService">
+        <service android:name=".firebase.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
@@ -99,15 +103,24 @@
                 android:name=".activities.MapsActivity"
                 android:label="@string/title_activity_maps">
         </activity>
-
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
                 android:name=".activities.VideoActivity">
         </activity>
-
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
                 android:name=".activities.RegisterActivity">
         </activity>
+        <activity android:name=".activities.TeamActivity">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+
+
+                <data android:mimeType="text/plain"/>
+
+            </intent-filter>
+        </activity>
     </application>
+
 </manifest>
