--- a/android/RSCHackathon/app/build.gradle
+++ b/android/RSCHackathon/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.android.gms:play-services-auth:9.0.2'
