--- a/android/RSCHackathon/app/src/main/AndroidManifest.xml
+++ b/android/RSCHackathon/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rsc.rschackathon">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.NFC"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <uses-feature
-            android:name="android.hardware.nfc"
-            android:required="true"/>
+        android:name="android.hardware.nfc"
+        android:required="true" />
 
 
     <!--
@@ -25,11 +25,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+        <activity
+            android:name=".activities.MainActivity"
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -37,6 +40,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"
 
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
@@ -57,15 +61,13 @@
             android:value="com.rsc.rschackathon.database" />
 
 
-        <service
-                android:name=".firebase.MyFirebaseMesagingService">
+        <service android:name=".firebase.MyFirebaseMesagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <service
-                android:name=".firebase.MyFirebaseInstanceIDService">
+        <service android:name=".firebase.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
@@ -105,9 +107,11 @@
 
         <activity
             android:name=".activities.MapsActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_activity_maps"
             android:parentActivityName=".activities.RecyclerViewActivity"
-            android:label="@string/title_activity_maps"></activity>
+
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <activity
             android:name=".activities.VideoActivity"
@@ -119,11 +123,11 @@
 
         <activity android:name=".activities.TeamActivity">
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
 
 
-                <data android:mimeType="text/plain"/>
+                <data android:mimeType="text/plain" />
 
             </intent-filter>
         </activity>
