--- a/android/RSCHackathon/app/src/main/AndroidManifest.xml
+++ b/android/RSCHackathon/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:name="android.hardware.nfc"
         android:required="true" />
 
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -27,7 +26,6 @@
         <activity android:name=".activities.LoginActivity" />
         <activity
             android:name=".activities.MainActivity"
-
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,8 +39,7 @@
         <activity
             android:name=".activities.RecyclerViewActivity"
             android:screenOrientation="portrait"
-
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CoolapsingToolbarActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -60,13 +57,11 @@
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.rsc.rschackathon.database" />
 
-
         <service android:name=".firebase.MyFirebaseMesagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".firebase.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -110,34 +105,36 @@
             android:label="@string/title_activity_maps"
             android:parentActivityName=".activities.RecyclerViewActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.TeamActivity"
-            android:parentActivityName=".activities.RecyclerViewActivity"
             android:launchMode="singleTask"
+            android:parentActivityName=".activities.RecyclerViewActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
 
-
                 <data android:mimeType="text/plain" />
-
             </intent-filter>
         </activity>
         <activity
             android:name=".activities.CreateTeamActivity"
             android:parentActivityName=".activities.RecyclerViewActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activities.ServerTeamActivity"
             android:parentActivityName=".activities.RecyclerViewActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.QuestionActivity"
+            android:parentActivityName=".activities.RecyclerViewActivity"
+            android:screenOrientation="portrait"
+            ></activity>
     </application>
 
 </manifest>
