--- a/android/RSCHackathon/app/src/main/AndroidManifest.xml
+++ b/android/RSCHackathon/app/src/main/AndroidManifest.xml
@@ -131,10 +131,11 @@
             android:name=".activities.ServerTeamActivity"
             android:parentActivityName=".activities.RecyclerViewActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.QuestionActivity"
+        <activity
+            android:name=".activities.QuestionActivity"
             android:parentActivityName=".activities.RecyclerViewActivity"
-            android:screenOrientation="portrait"
-            ></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.ResultsActivity"></activity>
     </application>
 
 </manifest>
