--- a/android/RSCHackathon/app/src/main/AndroidManifest.xml
+++ b/android/RSCHackathon/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.rsc.rschackathon">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.NFC"/>
 
     <uses-feature
-        android:name="android.hardware.nfc"
-        android:required="true" />
+            android:name="android.hardware.nfc"
+            android:required="true"/>
 
 
     <!--
@@ -18,31 +18,31 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:name=".RSCapp"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.LoginActivity" />
+            android:theme="@style/AppTheme"
+            android:name=".RSCapp"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true">
+        <activity android:name=".activities.LoginActivity"/>
         <activity
-            android:name=".activities.MainActivity"
+                android:name=".activities.MainActivity"
 
-            android:screenOrientation="portrait">
+                android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
                 android:name=".activities.ViewPagerActivity"/>
         <activity
-            android:name=".activities.RecyclerViewActivity"
-            android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:name=".activities.RecyclerViewActivity"
 
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:screenOrientation="portrait"></activity>
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
                 android:name=".activities.CoolapsingToolbarActivity"/>
@@ -108,12 +108,12 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-            android:name=".activities.MapsActivity"
-            android:label="@string/title_activity_maps"
-            android:parentActivityName=".activities.RecyclerViewActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:name=".activities.MapsActivity"
+                android:label="@string/title_activity_maps"
 
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:parentActivityName=".activities.RecyclerViewActivity"
+                android:screenOrientation="portrait"></activity>
 
         <activity
                 android:theme="@style/AppTheme.NoActionBar"
@@ -132,7 +132,10 @@
         </activity>
         <activity android:name=".activities.CreateTeamActivity">
         </activity>
-        <activity android:name=".activities.ServerTeamActivity">
+        <activity
+                android:name=".activities.ServerTeamActivity"
+                android:launchMode="singleTask">
+
         </activity>
     </application>
 
